--- a/app/story/page.mdx
+++ b/app/story/page.mdx
@@ -2,16 +2,29 @@
 
 > "The hardest conversations are the ones we need to have with ourselves."
 
-My journey didn't begin on a stage or in a book. It began in the silence. 
-Born in 1979, my path has been one of navigating the complexities of trauma, mental health, and the eventual awakening that comes from facing your own shadows.
+My name is Steven Whyte, and I am a **Mental Health Advocate, Author, and Coach** dedicated to breaking the silence around men's mental health.
+
+My journey didn't begin on a stage or in a book. It began in the silence. Born in 1979, my path has been one of navigating the complexities of trauma, addiction, and the eventual awakening that comes from facing your own shadows.
+
+---
 
 ## The Early Years
-(Content to be filled with Steven's specific bio details...)
+
+For too long, I carried the weight of things I could not say. Society told me to be strong, to suppress, to "man up." This silence nearly broke me.
 
 ## The Turning Point
-There comes a moment when the pain of staying start becomes greater than the pain of change. For me, that was...
 
-## Why "Unspoken"?
-We all carry things we cannot say. The weight of the unspoken can crush us, or it can become the fuel for our greatest liberation.
+There comes a moment when the pain of staying the same becomes greater than the pain of change. My turning point came when I realized that my story, my pain, was not a weakness—it was my greatest strength. By speaking the unspoken, I found not only my own healing but a way to help others find theirs.
 
-[Connect on Instagram](https://www.instagram.com/unspoken1979/)
+## The Mission: Unspoken Truths
+
+The word "Unspoken" represents everything we carry inside but are too afraid to voice. My mission is to create a world where men feel safe to share their struggles without judgment. Through my writing, coaching, and the upcoming **Unspoken** platform, I aim to foster a global community of healing, connection, and authentic self-discovery.
+
+> "We heal not by hiding from our past, but by understanding it."
+
+---
+
+## Connect With Me
+
+- **Instagram**: [@unspoken1979](https://www.instagram.com/unspoken1979/)
+- **TikTok**: [@stevewhyte171](https://www.tiktok.com/@stevewhyte171)
