feat: phase 4 transcendental wellness UI enhancements

--- a/app/story/page.mdx
+++ b/app/story/page.mdx
@@ -1,30 +1,46 @@
-# My Story: From Silence to Unspoken Truths
 
+import { Reveal } from "@/components/ui/Reveal";
+
+<Reveal>
+# My Story: From Silence to Unspoken Truths
+</Reveal>
+
+<Reveal delay={0.2}>
 <div className="mb-16 mt-8">
   <blockquote className="text-3xl font-serif italic text-clay border-l-0 pl-0 text-center max-w-2xl mx-auto leading-relaxed">
     "The hardest conversations are the ones we need to have with ourselves, but they are also the birth of our greatest strengths."
   </blockquote>
 </div>
+</Reveal>
 
+<Reveal>
 My name is **Steven Whyte**, and I am a Mental Health Advocate, Author, and Coach dedicated to breaking the silence around men's mental health. 
 
 My journey didn't begin on a stage or in a book. It began in the absolute silence of 4 AM, in the weight of secrets that felt too heavy to carry but too dangerous to speak. Born in 1979, my path has been a relentless navigation through trauma, the fog of addiction, and the eventual, luminous awakening that comes from facing your own shadows without flinching.
+</Reveal>
 
 ---
 
+<Reveal>
 ### The Early Years
 For too long, I carried the weight of things I could not say. Society told me to be strong, to suppress, to "man up." This silence nearly broke me. I lived in a world where "strength" was measured by how much you could hide, rather than how much you could heal.
+</Reveal>
 
+<Reveal>
 ### The Turning Point
 There comes a moment when the pain of staying the same becomes greater than the pain of change. My turning point came when I realized that my story—the raw, unfiltered truth of my struggles—was not a weakness. It was my greatest bridge to others. By speaking the unspoken, I found not only my own healing but a way to help others find theirs.
+</Reveal>
 
+<Reveal>
 ### The Mission: Unspoken Truths
 The word **"Unspoken"** represents everything we carry inside but are too afraid to voice. My mission is to create a world where men feel safe to share their struggles without judgment. 
 
 Through my writing, coaching, and the upcoming **Unspoken** platform, I aim to foster a global community of healing, connection, and authentic self-discovery. We are building a sanctuary where the silence is replaced by the soft, steady pulse of shared truth.
+</Reveal>
 
 ---
 
+<Reveal>
 <div className="grid grid-cols-1 md:grid-cols-2 gap-8 my-16">
   <div className="glass-panel p-8 rounded-3xl">
     <h4 className="font-mono uppercase tracking-widest text-clay text-sm mb-4">Values</h4>
@@ -35,11 +51,14 @@ Through my writing, coaching, and the upcoming **Unspoken** platform, I aim to f
     <p className="text-sm italic">A world where the "Silent Battle" is a relic of the past, replaced by the vocal presence of the well man.</p>
   </div>
 </div>
+</Reveal>
 
 ---
 
+<Reveal>
 ## Connect With Me
 
 - **Instagram**: [@unspoken1979](https://www.instagram.com/unspoken1979/)
 - **TikTok**: [@stevewhyte171](https://www.tiktok.com/@stevewhyte171)
 - **Collaborations**: [Contact Me](/contact)
+</Reveal>
